<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/profilebkg"
    tools:context=".NGOeditprofile">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textAlignment="center"
                android:textColor="@color/lavendar"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawablePadding="8dp"
                android:hint="@string/ngo_name2"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/text"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email2"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_call_24"
                android:drawablePadding="8dp"
                android:hint="@string/phone_no"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="8dp"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save"
                android:id="@+id/saveButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_first"
                app:cornerRadius = "20dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>