<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text3"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter"
        android:text="@string/food_waste_has_become_a_major_problem_worldwide_and_you_must_do_your_part_by_joining_with_us"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/getstarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textt2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/getstarted"
        android:layout_width="326dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_first"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="177dp"
        android:layout_height="162dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="117dp"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        app:srcCompat="@drawable/first_page_illustration"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/cookie"
        android:gravity="center"
        android:text="@string/foodscape"
        android:textColor="@color/lavendar"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/inter"
        android:text="@string/take_a_step_to_stop_wasting_food"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textt2"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/throwing_away_food_is_like_stealing_from_the_table_of_the_poor_and_hungry"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>