<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/text3"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/waste_for_you_is_best_for_someone_so_stop_wasting_food"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ngo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textt2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/ngo"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_first"
        android:text="@string/ngo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/donor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/donor"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_first"
        android:text="@string/donor"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ngo"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="259dp"
        android:layout_height="162dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:srcCompat="@drawable/second_page_illustration"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cookie"
        android:gravity="center"
        android:text="@string/foodscape_2"
        android:textColor="@color/lavendar"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textt2"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/donating_the_remaining_food_to_needy_is_equal_to_saving_lives_of_many"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>